{
  "version": 4,
  "terraform_version": "1.3.1",
  "serial": 223,
  "lineage": "4ab05ef1-3860-4260-7308-b4efa5756fcb",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040148700404:security-group/sg-04edd209e431e6542",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-04edd209e431e6542",
            "name": "default",
            "tags": {
              "Example": "terraform-restore-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "terraform-restore-cluster-default"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c262d351b8551fc"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040148700404:security-group/sg-0a4512e760285908d",
            "description": "Allow TLS inbound traffic",
            "egress": [],
            "id": "sg-0a4512e760285908d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "terraform-restore-multi-az-cluster-vpc_tls20221115174346799400000001",
            "name_prefix": "terraform-restore-multi-az-cluster-vpc_tls",
            "owner_id": "040148700404",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "terraform-restore-multi-az-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc"
            },
            "tags_all": {
              "Example": "terraform-restore-multi-az-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c262d351b8551fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040148700404:network-acl/acl-04037740a6c1b1d26",
            "default_network_acl_id": "acl-04037740a6c1b1d26",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-04037740a6c1b1d26",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "040148700404",
            "subnet_ids": [
              "subnet-00af21ef587c98b6e",
              "subnet-031f1654648510909",
              "subnet-043db8c2e6064fc23",
              "subnet-04f878e87882fbb46",
              "subnet-05b92e87dda38db54",
              "subnet-0620be48c0e12401b",
              "subnet-063d45f5e93f5f45f",
              "subnet-07a6554d44f1e7e65",
              "subnet-0cb18f6cb3b535ed9"
            ],
            "tags": {
              "Example": "terraform-restore-multi-az-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "terraform-restore-multi-az-cluster-default"
            },
            "tags_all": {
              "Example": "terraform-restore-multi-az-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "terraform-restore-multi-az-cluster-default"
            },
            "vpc_id": "vpc-09c262d351b8551fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040148700404:route-table/rtb-0984d6d7357d7c76f",
            "default_route_table_id": "rtb-0984d6d7357d7c76f",
            "id": "rtb-0984d6d7357d7c76f",
            "owner_id": "040148700404",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Example": "terraform-restore-multi-az-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "terraform-restore-multi-az-cluster-default"
            },
            "tags_all": {
              "Example": "terraform-restore-multi-az-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "terraform-restore-multi-az-cluster-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-09c262d351b8551fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040148700404:security-group/sg-04edd209e431e6542",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-04edd209e431e6542",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "040148700404",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "terraform-restore-multi-az-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "terraform-restore-multi-az-cluster-default"
            },
            "tags_all": {
              "Example": "terraform-restore-multi-az-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "terraform-restore-multi-az-cluster-default"
            },
            "vpc_id": "vpc-09c262d351b8551fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040148700404:internet-gateway/igw-08d4c1765410eb4b7",
            "id": "igw-08d4c1765410eb4b7",
            "owner_id": "040148700404",
            "tags": {
              "Example": "terraform-restore-multi-az-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "terraform-restore-multi-az-cluster"
            },
            "tags_all": {
              "Example": "terraform-restore-multi-az-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "terraform-restore-multi-az-cluster"
            },
            "vpc_id": "vpc-09c262d351b8551fc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08d4c1765410eb4b7",
            "id": "r-rtb-0aad9d0fa82ef352b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0aad9d0fa82ef352b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040148700404:route-table/rtb-0d50c825a2a0b5a04",
            "id": "rtb-0d50c825a2a0b5a04",
            "owner_id": "040148700404",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Example": "terraform-restore-multi-az-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "terraform-restore-multi-az-cluster-private-us-east-1a"
            },
            "tags_all": {
              "Example": "terraform-restore-multi-az-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "terraform-restore-multi-az-cluster-private-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c262d351b8551fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040148700404:route-table/rtb-0434576e96181396c",
            "id": "rtb-0434576e96181396c",
            "owner_id": "040148700404",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Example": "terraform-restore-multi-az-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "terraform-restore-multi-az-cluster-private-us-east-1b"
            },
            "tags_all": {
              "Example": "terraform-restore-multi-az-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "terraform-restore-multi-az-cluster-private-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c262d351b8551fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040148700404:route-table/rtb-0839085e8f772471a",
            "id": "rtb-0839085e8f772471a",
            "owner_id": "040148700404",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Example": "terraform-restore-multi-az-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "terraform-restore-multi-az-cluster-private-us-east-1c"
            },
            "tags_all": {
              "Example": "terraform-restore-multi-az-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "terraform-restore-multi-az-cluster-private-us-east-1c"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c262d351b8551fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040148700404:route-table/rtb-0aad9d0fa82ef352b",
            "id": "rtb-0aad9d0fa82ef352b",
            "owner_id": "040148700404",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08d4c1765410eb4b7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Example": "terraform-restore-multi-az-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "terraform-restore-multi-az-cluster-public"
            },
            "tags_all": {
              "Example": "terraform-restore-multi-az-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "terraform-restore-multi-az-cluster-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c262d351b8551fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0727e546c0a7e7cc6",
            "route_table_id": "rtb-0d50c825a2a0b5a04",
            "subnet_id": "subnet-05b92e87dda38db54"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b6129d13e6b84eb",
            "route_table_id": "rtb-0434576e96181396c",
            "subnet_id": "subnet-031f1654648510909"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce12fa3b6409049c",
            "route_table_id": "rtb-0839085e8f772471a",
            "subnet_id": "subnet-0cb18f6cb3b535ed9"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02febe2e431cfab52",
            "route_table_id": "rtb-0d50c825a2a0b5a04",
            "subnet_id": "subnet-043db8c2e6064fc23"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fddd4b45dfb8930e",
            "route_table_id": "rtb-0434576e96181396c",
            "subnet_id": "subnet-063d45f5e93f5f45f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fede91358cb7c2b8",
            "route_table_id": "rtb-0839085e8f772471a",
            "subnet_id": "subnet-07a6554d44f1e7e65"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0020f30768e568c28",
            "route_table_id": "rtb-0aad9d0fa82ef352b",
            "subnet_id": "subnet-04f878e87882fbb46"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea4ffa02fdd6f80d",
            "route_table_id": "rtb-0aad9d0fa82ef352b",
            "subnet_id": "subnet-00af21ef587c98b6e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a3522621142fb76",
            "route_table_id": "rtb-0aad9d0fa82ef352b",
            "subnet_id": "subnet-0620be48c0e12401b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040148700404:subnet/subnet-05b92e87dda38db54",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.201.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b92e87dda38db54",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "040148700404",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "terraform-restore-multi-az-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "DB Subnet One"
            },
            "tags_all": {
              "Example": "terraform-restore-multi-az-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "DB Subnet One"
            },
            "vpc_id": "vpc-09c262d351b8551fc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040148700404:subnet/subnet-031f1654648510909",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.202.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-031f1654648510909",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "040148700404",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "terraform-restore-multi-az-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "DB Subnet Two"
            },
            "tags_all": {
              "Example": "terraform-restore-multi-az-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "DB Subnet Two"
            },
            "vpc_id": "vpc-09c262d351b8551fc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040148700404:subnet/subnet-0cb18f6cb3b535ed9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.203.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb18f6cb3b535ed9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "040148700404",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "terraform-restore-multi-az-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "DB Subnet Three"
            },
            "tags_all": {
              "Example": "terraform-restore-multi-az-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "DB Subnet Three"
            },
            "vpc_id": "vpc-09c262d351b8551fc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040148700404:subnet/subnet-043db8c2e6064fc23",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043db8c2e6064fc23",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "040148700404",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "terraform-restore-multi-az-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "Private Subnet One"
            },
            "tags_all": {
              "Example": "terraform-restore-multi-az-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "Private Subnet One"
            },
            "vpc_id": "vpc-09c262d351b8551fc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040148700404:subnet/subnet-063d45f5e93f5f45f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063d45f5e93f5f45f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "040148700404",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "terraform-restore-multi-az-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "Private Subnet Two"
            },
            "tags_all": {
              "Example": "terraform-restore-multi-az-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "Private Subnet Two"
            },
            "vpc_id": "vpc-09c262d351b8551fc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040148700404:subnet/subnet-07a6554d44f1e7e65",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a6554d44f1e7e65",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "040148700404",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "terraform-restore-multi-az-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "Private Subnet Three"
            },
            "tags_all": {
              "Example": "terraform-restore-multi-az-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "Private Subnet Three"
            },
            "vpc_id": "vpc-09c262d351b8551fc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040148700404:subnet/subnet-04f878e87882fbb46",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f878e87882fbb46",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "040148700404",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "terraform-restore-multi-az-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "terraform-restore-multi-az-cluster-public-us-east-1a"
            },
            "tags_all": {
              "Example": "terraform-restore-multi-az-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "terraform-restore-multi-az-cluster-public-us-east-1a"
            },
            "vpc_id": "vpc-09c262d351b8551fc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040148700404:subnet/subnet-00af21ef587c98b6e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00af21ef587c98b6e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "040148700404",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "terraform-restore-multi-az-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "terraform-restore-multi-az-cluster-public-us-east-1b"
            },
            "tags_all": {
              "Example": "terraform-restore-multi-az-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "terraform-restore-multi-az-cluster-public-us-east-1b"
            },
            "vpc_id": "vpc-09c262d351b8551fc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040148700404:subnet/subnet-0620be48c0e12401b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0620be48c0e12401b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "040148700404",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "terraform-restore-multi-az-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "terraform-restore-multi-az-cluster-public-us-east-1c"
            },
            "tags_all": {
              "Example": "terraform-restore-multi-az-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "terraform-restore-multi-az-cluster-public-us-east-1c"
            },
            "vpc_id": "vpc-09c262d351b8551fc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040148700404:vpc/vpc-09c262d351b8551fc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04037740a6c1b1d26",
            "default_route_table_id": "rtb-0984d6d7357d7c76f",
            "default_security_group_id": "sg-04edd209e431e6542",
            "dhcp_options_id": "dopt-0808aff759788e1b2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09c262d351b8551fc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0984d6d7357d7c76f",
            "owner_id": "040148700404",
            "tags": {
              "Example": "terraform-restore-multi-az-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "terraform-restore-multi-az-cluster"
            },
            "tags_all": {
              "Example": "terraform-restore-multi-az-cluster",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "terraform-restore-multi-az-cluster"
            }
          }
        }
      ]
    }
  ]
}